Application files for issue tracker

--- a/views/admin_page.erb
+++ b/views/admin_page.erb
@@ -46,7 +46,7 @@
             </ul>
         </li>
             <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">Admin</a></li>
+            <li><a class="btn btn-default" href="/logout" role="button">Log out</a></li>
         </ul>
         </ul>
         </div>
