--- a/views/login_page.erb
+++ b/views/login_page.erb
@@ -40,7 +40,7 @@
   </div>
   <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
-      <a class="btn btn-primary" href="../views/user_page" role="button">Sign in</a>
+      <a class="btn btn-primary" href="/admin" role="button">Sign in</a>
       <a href="url">Create a new acount</a>
 		</div>
 			</div>
